--- a/app/src/main/res/drawable/bg_login.xml
+++ b/app/src/main/res/drawable/bg_login.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <gradient android:startColor="#f6f6f6"
-        android:endColor="#fefefe"
+    <gradient android:startColor="#ebecf0"
+        android:endColor="#ecedf1"
         android:angle="90">
     </gradient>
 
