--- a/app/src/main/res/drawable/input_login.xml
+++ b/app/src/main/res/drawable/input_login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="#70000000"/>
+    <solid android:color="#20baf2"/>
     <corners android:radius="10dip"/>
 
 </shape>
