--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/activity_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
     >
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@mipmap/bg_pic"
-        android:padding="0dp"
-        android:layout_margin="0dp"
-        android:scaleType="fitXY"
 
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#57000000"
-        android:gravity="center"
+        android:background="@drawable/bg_login"
+
         android:orientation="vertical"
         android:layout_x="0dp"
         android:layout_y="0dp">
+        
+        <de.hdodenhof.circleimageview.CircleImageView
+
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:civ_border_width="1px"
+            app:civ_border_color="#FF000000"
+            android:src="@drawable/icon_head"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            />
+        
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:background="#e6e7e7"
             android:orientation="vertical"
-            android:layout_margin="40dp"
-            android:background="@drawable/input_login"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#ffffff"
                 android:orientation="horizontal"
+                android:layout_marginBottom="1sp"
                 >
                 <Spinner
                     android:id="@+id/login_roles"
@@ -42,7 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    android:background="@null"
+                    style="@style/Theme.AppCompat.Light"
                     android:entries="@array/roles">
 
                 </Spinner>
@@ -63,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#ffffff"
                 >
                 <TextView
                     android:gravity="center"
@@ -85,15 +92,39 @@
             </LinearLayout>
 
         </LinearLayout>
+        <RelativeLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:text="忘记密码？"
+                android:textSize="16dp"
+                android:textColor="#1ca3d4"
+                />
+            <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:text="新用户注册"
+                android:textSize="16dp"
+                android:textColor="#1ca3d4"
+                />
+
+        </RelativeLayout>
         <Button
             android:id="@+id/login_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit"
             android:textColor="#ffffff"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/input_login"
             />
     </LinearLayout>
